FEAT : return ScoredJobDto in jobs batch API